--- a/stylesheet.qss
+++ b/stylesheet.qss
@@ -1,7 +1,9 @@
+/* Styling of menu page */
+
 #MenuTitle {
     background-color: #6511e2;
     color: mintcream;
-    font-size: 28px;
+    font-size: 40px;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -14,5 +16,20 @@
     border: 3px #8b54df;
     border-style: solid;
     border-radius: 12px;
-    font-size: 14px;
+    font-size: 20px;
+}
+
+#InfoPage {
+    background-color: #6511e2;
+}
+
+#InfoTitle {
+    color: mintcream;
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#InfoContent {
+    color: mintcream;
+    font-size: 16px;
 }
